k8s/product-postgres-statefulset.yaml
# k8s/product-postgres-service-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: product-postgres
  namespace: ecommerce
  labels:
    app: product-postgres
spec:
  ports:
    - name: postgres
      port: 5432
  clusterIP: None
  selector:
    app: product-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: product-postgres
  namespace: ecommerce
spec:
  serviceName: "product-postgres"
  replicas: 1
  selector:
    matchLabels:
      app: product-postgres
  template:
    metadata:
      labels:
        app: product-postgres
    spec:
      # ensure group ownership on mounted volumes
      securityContext:
        fsGroup: 999
      # initContainer creates PGDATA subdir and fixes ownership (safe)
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d/product-init.sql
              subPath: product-init.sql
      volumes:
        - name: init-sql
          configMap:
            name: db-init-sql
            items:
              - key: product-init.sql
                path: product-init.sql
  volumeClaimTemplates:
    - metadata:
        name: pgdata
        labels:
          app: product-postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: gp3
